unpackaged/main/default/objects/litify_docs__Input_Format_Option__c/litify_docs__Input_Format_Option__c.object-meta.xml
<CustomObject>
    <description>Stores the format type and format value for the given Input, scoped to the given Template.</description>
    <label>Merge Input Format Option</label>
    <nameField>
        <displayFormat>FORMAT-{000000}</displayFormat>
        <label>Merge Input Format Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Input Format Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>