unpackaged/main/default/objects/litify_docs__Input_Format_Option__c/fields/litify_docs__Format_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Format_Type__c</fullName>
    <description>The type of format to apply to the given Input.</description>
    <inlineHelpText>The type of format to apply to the given Input.</inlineHelpText>
    <label>Format Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>