unpackaged/main/default/objects/litify_docs__Input_Format_Option__c/fields/litify_docs__Format_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Format_Value__c</fullName>
    <description>The value of format to apply to the given Input, stored as a JSON (e.g. {&quot;pattern&quot;:&quot;MM/dd/yyyy&quot;,&quot;lang_code&quot;:&quot;en_US&quot;})</description>
    <inlineHelpText>The value of format to apply to the given Input (e.g. MM/DD/YYYY for formatting a date in this fashion)</inlineHelpText>
    <label>Format Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>