unpackaged/main/default/objects/litify_docs__Input_Format_Option__c/fields/litify_docs__Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Input that the Formatting Option belongs to.</description>
    <inlineHelpText>The Input that the Formatting Option belongs to.</inlineHelpText>
    <label>Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipLabel>Input Format Options</relationshipLabel>
    <relationshipName>Input_Format_Options</relationshipName>
    <type>Lookup</type>
</CustomField>