unpackaged/main/default/objects/litify_docs__Input_Format_Option__c/fields/litify_docs__Template_Scope__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Template_Scope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Template record to scope the Formatting Option to, since an input can belong to many templates.</description>
    <inlineHelpText>The Template record to scope the Formatting Option to, since an input can belong to many templates.</inlineHelpText>
    <label>Template Scope</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipName>Input_Formatting_Options</relationshipName>
    <type>Lookup</type>
</CustomField>